RESOLVED FIXED154431
AX: Inconsistency between CharacterOffset and VisiblePostition
https://bugs.webkit.org/show_bug.cgi?id=154431
Summary AX: Inconsistency between CharacterOffset and VisiblePostition
Nan Wang
Reported 2016-02-18 17:45:47 PST
The previous/next text marker from CharacterOffset should be consistent with VisiblePosition so that node start and end will be included when navigating.
Attachments
patch (26.27 KB, patch)
2016-02-18 18:05 PST, Nan Wang
no flags
patch (26.40 KB, patch)
2016-02-19 08:39 PST, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2016-02-18 17:47:25 PST
Nan Wang
Comment 2 2016-02-18 18:05:53 PST
chris fleizach
Comment 3 2016-02-19 00:01:36 PST
Comment on attachment 271720 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=271720&action=review > Source/WebCore/accessibility/AXObjectCache.cpp:1866 > + // When VisiblePostion move to next node, it will count the leading line break as "moves" to the next node > Source/WebCore/accessibility/AXObjectCache.h:-199 > - CharacterOffset nextCharacterOffset(const CharacterOffset&, bool ignoreStart = true); it's not clear what ignoreStart/ignorePrevEnd means here. can you add a comment or rename this param? /??
Nan Wang
Comment 4 2016-02-19 08:39:07 PST
WebKit Commit Bot
Comment 5 2016-02-19 10:58:29 PST
Comment on attachment 271755 [details] patch Clearing flags on attachment: 271755 Committed r196824: <http://trac.webkit.org/changeset/196824>
WebKit Commit Bot
Comment 6 2016-02-19 10:58:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.